Fixed alignment of character container. Horizontal alignment looks a little off in Safari though.

--- a/src/pages/SignupPage.module.css
+++ b/src/pages/SignupPage.module.css
@@ -43,14 +43,15 @@ html, body {
   padding-right: 70px;
   border-radius: 30px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin-top: 20px;
   top: 50%;
-  left: 0; /* Align to the left side */
+  left: 2%; /* Align to the left side */
   transform: translateY(-50%); /* Adjust for vertical centering */
   min-width: 620px; /* Prevents form from having a smaller width than children */
   min-height: 600px; 
   width: 50%;
   max-width: 620px;
-  height: calc(100% - 80px);
+  height: auto;
   display: flex;
   position: absolute;
   flex-direction: column; /* Stack the children vertically */
@@ -314,15 +315,16 @@ html, body {
 /* ----------------Character styles---------------- */
 
 .characterContainer {
-  margin-top: 220px;
-  margin-left: calc(61vw);
   position: absolute;
-  right: 50%;
+  margin-top: 100px;
   top: 50%;
-  transform: translate(-50%, -50%);
+  right: 0;
+  transform: translateY(-50%); /* Adjust for vertical centering */
   width: 50%;
   min-width: 412px;
-  max-width: 620px;
+  max-width: 50vw;
+  height: auto; /* Let the height be determined by its content */
+  display: flex;
   align-items: center; /* Align the character image vertically */
   flex-direction: column; /* Stack children vertically */
   justify-content: center; /* Centers the character image horizontally */
@@ -338,8 +340,9 @@ html, body {
 .speechBubble {
   align-items: center;
   position: absolute;  /* MUST HAVE for archi img to not shift up */
+  text-align: center;
   max-width: 100%; /* Ensure they do not overflow their container */
-  width: 412px;
+  width: 100%;
   height: 80px;
   margin-top: -40px; /* Add spacing below speech bubble */
   top: 0;  /* MUST HAVE for archi img to not shift up */
